objects/SVMXC__Installed_Product__c.object
<CustomObject>
    <customHelpPage>SVMXC__SVMX_LaunchHelp</customHelpPage>
    <description>Installed Product represents one or a collection of product units delivered to a customer and installed at the customer’s location(s). Depending upon the tracking needs of an organization, installed products are tracked using a serial number, a lot/batch number or simply by the product number. In ServiceMax, Installed Product record drives entitlement, material movement and service delivery activities.</description>
    <fields>
        <fullName>BE_DEF_Navision_Ref_Number__c</fullName>
        <label>BE DEF Navision Ref Number</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Battery_Fitted_Date__c</fullName>
        <label>Battery Fitted Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Battery_Fitted_Size__c</fullName>
        <label>Battery Fitted Size</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Category_of_System__c</fullName>
        <label>Category of System</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>M</fullName>
                </value>
                <value>
                    <fullName>L1</fullName>
                </value>
                <value>
                    <fullName>L2</fullName>
                </value>
                <value>
                    <fullName>L3</fullName>
                </value>
                <value>
                    <fullName>L4</fullName>
                </value>
                <value>
                    <fullName>L5</fullName>
                </value>
                <value>
                    <fullName>P1</fullName>
                </value>
                <value>
                    <fullName>P2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Fire_alarm_Monitored__c</fullName>
        <label>Fire alarm Monitored</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>InstallationDiscipline__c</fullName>
        <label>Installation Discipline</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Installation_Discipline</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Installation_Discipline__c</fullName>
        <label>Installation Discipline</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Fire</fullName>
                </value>
                <value>
                    <fullName>Alarm</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Italy_Navision_Ref_Number__c</fullName>
        <label>Italy Navision Ref Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quantity_Of_Loops__c</fullName>
        <label>Quantity Of Loops</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quantity_Of_Zones__c</fullName>
        <label>Quantity Of Zones</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <defaultValue>1</defaultValue>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Repeater_Panel__c</fullName>
        <label>Repeater Panel</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SVMXC__Access_Hours__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Time period during which this installed product can be accessed for service. Reference to an existing Business Hours record in Salesforce</description>
        <label>Access Hours</label>
        <referenceTo>BusinessHours</referenceTo>
        <relationshipName>Installed_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SVMXC__Alternate_Company__c</fullName>
        <description>Free text to indicate if another account is involved with this product but is not an existing customer record</description>
        <inlineHelpText>Free text to indicate if another company is involved with this product but is not an existing customer record</inlineHelpText>
        <label>Alternate Account</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SVMXC__Asset_Tag__c</fullName>
        <description>Another way to identify the installed product. Typically asset tags are assigned by your customers. This will be a timesaver when your customer calls for support and identifies  the product by their asset tag instead of trying to locate your serial number on the product</description>
        <inlineHelpText>Another way to identify the installed product. Asset tags are normally assigned by your customers. When your customer calls for support, they can identify the product by their asset tag instead of trying to locate your serial number on the product.</inlineHelpText>
        <label>Asset Tag</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SVMXC__Business_Hours__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>(Do Not Use)</description>
        <inlineHelpText>(Do Not Use)</inlineHelpText>
        <label>Business Hours (Do Not Use)</label>
        <referenceTo>BusinessHours</referenceTo>
        <relationshipName>Installed_Products2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SVMXC__City__c</fullName>
        <description>“City” part of the physical location address</description>
        <inlineHelpText>“City” part of the physical location address</inlineHelpText>
        <label>City</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SVMXC__Company__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Name of the customer account for this installed product. Lookup to an existing salesforce account record</description>
        <inlineHelpText>Name of the customer account for this installed product. Lookup to an existing salesforce account record</inlineHelpText>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>R00N70000001hzZ0EAI</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SVMXC__Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Name of the primary contact for this installed product at the customer’s location. Lookup to an existing salesforce contact record</description>
        <inlineHelpText>Name of the primary contact for this installed product at the customer’s location. Lookup to an existing salesforce contact record</inlineHelpText>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>R00N70000001hzcJEAQ</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SVMXC__Country__c</fullName>
        <description>“Country” part of the physical location address</description>
        <inlineHelpText>“Country” part of the physical location address</inlineHelpText>
        <label>Country</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Afghanistan</fullName>
                </value>
                <value>
                    <fullName>Albania</fullName>
                </value>
                <value>
                    <fullName>Algeria</fullName>
                </value>
                <value>
                    <fullName>American Samoa</fullName>
                </value>
                <value>
                    <fullName>Andorra</fullName>
                </value>
                <value>
                    <fullName>Anguilla</fullName>
                </value>
                <value>
                    <fullName>Antarctica</fullName>
                </value>
                <value>
                    <fullName>Antigua And Barbuda</fullName>
                </value>
                <value>
                    <fullName>Argentina</fullName>
                </value>
                <value>
                    <fullName>Armenia</fullName>
                </value>
                <value>
                    <fullName>Aruba</fullName>
                </value>
                <value>
                    <fullName>Australia</fullName>
                </value>
                <value>
                    <fullName>Austria</fullName>
                </value>
                <value>
                    <fullName>Ayerbaijan</fullName>
                </value>
                <value>
                    <fullName>Bahamas, The</fullName>
                </value>
                <value>
                    <fullName>Bahrain</fullName>
                </value>
                <value>
                    <fullName>Bangladesh</fullName>
                </value>
                <value>
                    <fullName>Barbados</fullName>
                </value>
                <value>
                    <fullName>Belarus</fullName>
                </value>
                <value>
                    <fullName>Belize</fullName>
                </value>
                <value>
                    <fullName>Belgium</fullName>
                </value>
                <value>
                    <fullName>Benin</fullName>
                </value>
                <value>
                    <fullName>Bermuda</fullName>
                </value>
                <value>
                    <fullName>Bhutan</fullName>
                </value>
                <value>
                    <fullName>Bolivia</fullName>
                </value>
                <value>
                    <fullName>Bouvet Is</fullName>
                </value>
                <value>
                    <fullName>Bosnia and Herzegovina</fullName>
                </value>
                <value>
                    <fullName>Botswana</fullName>
                </value>
                <value>
                    <fullName>Brazil</fullName>
                </value>
                <value>
                    <fullName>British Indian Ocean Territory</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SVMXC__Date_Installed__c</fullName>
        <description>Date on which the product was installed at the customer location</description>
        <inlineHelpText>Date on which the product was installed at the customer location</inlineHelpText>
        <label>Date Installed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SVMXC__Date_Ordered__c</fullName>
        <description>Date on which this product was ordered by the customer</description>
        <inlineHelpText>Date on which this product was ordered by the customer</inlineHelpText>
        <label>Date Ordered</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SVMXC__Date_Shipped__c</fullName>
        <description>Date on which this product was shipped to the customer originally</description>
        <inlineHelpText>Date on which this product was shipped to the customer originally</inlineHelpText>
        <label>Date Shipped</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SVMXC__Distributor_Company__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Name of the distributor account if applicable</description>
        <inlineHelpText>Name of the distributor company if applicable</inlineHelpText>
        <label>Distributor Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>R00N70000001hzcLEAQ</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SVMXC__Distributor_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Name of the distributor contact if applicable</description>
        <inlineHelpText>Name of the distributor contact if applicable</inlineHelpText>
        <label>Distributor Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>R00N70000001hzc8EAA</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SVMXC__Installation_Notes__c</fullName>
        <description>Any technical information relevant for the service organization. This is normally supplied by field service engineers upon completion of installation</description>
        <inlineHelpText>Any technical information relevant for the service organization. This is normally supplied by field service engineers upon completion of installation</inlineHelpText>
        <label>Installation Notes</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SVMXC__Last_Date_Shipped__c</fullName>
        <description>If this product was shipped multiple times, date of the most recent shipment. Multiple shipments are possible if the product is returned for depot repair or service</description>
        <inlineHelpText>If this product was shipped multiple times, date of the most recent shipment. Multiple shipments are possible if the product is returned for depot repair or service</inlineHelpText>
        <label>Last Date Shipped</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SVMXC__Latitude__c</fullName>
        <description>Address location north or south of the equator</description>
        <inlineHelpText>Address location north or south of the equator</inlineHelpText>
        <label>Latitude</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SVMXC__Longitude__c</fullName>
        <description>East west geographic coordinate measurement.</description>
        <inlineHelpText>East west geographic coordinate measurement.</inlineHelpText>
        <label>Longitude</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SVMXC__Parent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Serial/Lot number of the parent product in the installed product hierarchy. This is a lookup to an existing installed product record.</description>
        <inlineHelpText>Serial/Lot number of the parent product in the installed product hierarchy. This is a lookup to an existing installed product record.</inlineHelpText>
        <label>Parent</label>
        <referenceTo>SVMXC__Installed_Product__c</referenceTo>
        <relationshipName>R00N70000001hzcgEAA</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SVMXC__Preferred_Technician__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Preferred Technician</label>
        <referenceTo>SVMXC__Service_Group_Members__c</referenceTo>
        <relationshipName>Installed_Product</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SVMXC__ProductIQTemplate__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ProductIQ Template</label>
        <referenceTo>SVMXC__ProductIQTemplate__c</referenceTo>
        <relationshipName>Installed_Products_del</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SVMXC__Product_Name__c</fullName>
        <description>Name of the product associated with the Installed Product</description>
        <formula>SVMXC__Product__r.Name</formula>
        <inlineHelpText>Name of the product associated with the Installed Product</inlineHelpText>
        <label>Product Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SVMXC__Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Name of the product. This is a lookup to an existing salesforce product record.</description>
        <inlineHelpText>Name of the product. This is a lookup to an existing salesforce product record.</inlineHelpText>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipName>R00N70000001hzchEAA</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SVMXC__SM_Batch_Lot2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Identification number assigned to a specific quantity or lot of materials from a single manufacturer.</description>
        <inlineHelpText>Identification number assigned to a specific quantity or lot of materials from a single manufacturer.</inlineHelpText>
        <label>Batch/Lot</label>
        <referenceTo>SVMXC__SM_Batch_Lot__c</referenceTo>
        <relationshipLabel>Installed Products</relationshipLabel>
        <relationshipName>Installed_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SVMXC__SM_External_Company__c</fullName>
        <description>External system unique ID of the account related to the installed product.</description>
        <inlineHelpText>External system unique ID of the account related to the installed product.</inlineHelpText>
        <label>Account (External)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SVMXC__SM_External_ID__c</fullName>
        <description>External System Unique ID</description>
        <externalId>true</externalId>
        <inlineHelpText>External System Unique ID</inlineHelpText>
        <label>External Record ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SVMXC__SM_External_Parent__c</fullName>
        <description>External system unique ID to the parent installed product in the installed product hierarchy.</description>
        <inlineHelpText>External system unique ID to the parent installed product in the installed product hierarchy.</inlineHelpText>
        <label>Parent (External)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SVMXC__SM_External_Product__c</fullName>
        <description>External system unique ID of the product related to installed product</description>
        <inlineHelpText>External system unique ID of the product related to installed product</inlineHelpText>
        <label>Product (External)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SVMXC__SM_External_Site__c</fullName>
        <description>External system unique ID of the location related to the installed product.</description>
        <inlineHelpText>External system unique ID of the location related to the installed product.</inlineHelpText>
        <label>Location (External)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SVMXC__SM_External_Top_Level__c</fullName>
        <description>External system unique ID to the top level installed product in the installed product hierarchy.</description>
        <inlineHelpText>External system unique ID to the top level installed product in the installed product hierarchy.</inlineHelpText>
        <label>Top-Level (External)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SVMXC__Sales_Order_Number__c</fullName>
        <description>Sales order reference (typically from the ERP application)</description>
        <inlineHelpText>Sales order reference (typically from the ERP application)</inlineHelpText>
        <label>Sales Order Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SVMXC__Serial_Lot_Number__c</fullName>
        <description>Unique identification of this product. This information is Required if the product’s tracking is Serialized or Lot/Batch Tracked in the product record</description>
        <inlineHelpText>Unique identification of this product. This information is Required if the product’s tracking is Serialized or Lot/Batch Tracked in the product record</inlineHelpText>
        <label>Serial/Lot Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SVMXC__Service_Contract_End_Date__c</fullName>
        <description>This field is used by Reverse Logistics Module. End date of the latest service contract/line for this installed product. Derived automatically upon creating/updating service contract</description>
        <label>Service Contract End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SVMXC__Service_Contract_Exchange_Type__c</fullName>
        <description>This field is used by Reverse Logistics Module. Exchange type from the latest service contract/line for this installed product. Derived automatically upon creating/updating service contract</description>
        <label>Service Contract Exchange Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Advance Exchange</fullName>
                </value>
                <value>
                    <fullName>Return Exchange</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SVMXC__Service_Contract_Line__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is used by Reverse Logistics Module. Reference to the latest service contract line for this installed product. Derived automatically upon creating/updating service contract</description>
        <label>Service Contract Line</label>
        <referenceTo>SVMXC__Service_Contract_Products__c</referenceTo>
        <relationshipName>Installed_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SVMXC__Service_Contract_Start_Date__c</fullName>
        <description>This field is used by Reverse Logistics Module. Start date of the latest service contract/line for this installed product. Derived automatically upon creating/updating service contract</description>
        <label>Service Contract Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SVMXC__Service_Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is used by Reverse Logistics Module. Reference to the latest service contract for this installed product. Derived automatically upon creating/updating service contract</description>
        <label>Service Contract</label>
        <referenceTo>SVMXC__Service_Contract__c</referenceTo>
        <relationshipName>Installed_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SVMXC__Site__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Current physical location of the product. This is a lookup to an existing location record</description>
        <inlineHelpText>Current physical location of the product. This is a lookup to an existing site record</inlineHelpText>
        <label>Location</label>
        <referenceTo>SVMXC__Site__c</referenceTo>
        <relationshipName>R00N70000001hzcqEAA</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SVMXC__State__c</fullName>
        <description>“State/Province” part of the physical location address</description>
        <inlineHelpText>“State/Province” part of the physical location address</inlineHelpText>
        <label>State</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SVMXC__Status__c</fullName>
        <description>Current status of the installed product.</description>
        <inlineHelpText>Current status of the installed product.</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Engineering</fullName>
                </value>
                <value>
                    <fullName>Shipped</fullName>
                </value>
                <value>
                    <fullName>Installed</fullName>
                    <default>true</default>
                    <label>Installed</label>
                </value>
                <value>
                    <fullName>Deinstalled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SVMXC__Street__c</fullName>
        <description>“Street” part of the physical location address</description>
        <inlineHelpText>“Street” part of the physical location address</inlineHelpText>
        <label>Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SVMXC__Sub_Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sub Location</label>
        <referenceTo>SVMXC__Sub_Location__c</referenceTo>
        <relationshipName>Installed_Products_del</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SVMXC__Top_Level__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Serial/Lot number of the top-most product in the installed product hierarchy.</description>
        <inlineHelpText>Serial/Lot number of the top-most product in the installed product hierarchy.</inlineHelpText>
        <label>Top-Level</label>
        <referenceTo>SVMXC__Installed_Product__c</referenceTo>
        <relationshipName>R00N70000001hzcvEAA</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SVMXC__Warranty_End_Date__c</fullName>
        <description>This field is used by Reverse Logistics Module. End date of the latest warranty for this installed product. Derived automatically upon creating/updating warranty</description>
        <label>Warranty End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SVMXC__Warranty_Exchange_Type__c</fullName>
        <description>This field is used by Reverse Logistics Module. Exchange type from the latest warranty for this installed product. Derived automatically upon creating/updating warranty</description>
        <label>Warranty Exchange Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Advance Exchange</fullName>
                </value>
                <value>
                    <fullName>Return Exchange</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SVMXC__Warranty_Start_Date__c</fullName>
        <description>This field is used by Reverse Logistics Module. Start date of the latest warranty for this installed product. Derived automatically upon creating/updating warranty</description>
        <label>Warranty Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SVMXC__Warranty__c</fullName>
        <label>Warranty</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SVMXC__Zip__c</fullName>
        <description>“Zip/Postal Code” part of the physical location address</description>
        <inlineHelpText>“Zip/Postal Code” part of the physical location address</inlineHelpText>
        <label>Zip</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SVMX_PS_Active_Coverage__c</fullName>
        <formula>IMAGE(IF(ISBLANK(SVMXC__Service_Contract__c) || SVMXC__Service_Contract__r.SVMXC__End_Date__c &lt; TODAY(), 
&quot;/resource/ServiceMaxIcons/No.png&quot;,
&quot;/resource/ServiceMaxIcons/OK.png&quot;),
&quot;Has Coverage&quot;, 16,16) + &apos; Valid until &apos; + Text(SVMXC__Service_Contract__r.SVMXC__End_Date__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Active Coverage</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SVMX_PS_Asset_Uptime__c</fullName>
        <label>Asset Uptime</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SVMX_PS_Classification__c</fullName>
        <label>Classification</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Inventory</fullName>
                </value>
                <value>
                    <fullName>Leased</fullName>
                </value>
                <value>
                    <fullName>Loaned</fullName>
                </value>
                <value>
                    <fullName>QA</fullName>
                </value>
                <value>
                    <fullName>Scrapped</fullName>
                </value>
                <value>
                    <fullName>Sold</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SVMX_PS_External_ID__c</fullName>
        <description>Installed Product External ID</description>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>SVMX_PS_Health_Indicator__c</fullName>
        <formula>IMAGE(IF(SVMX_PS_Asset_Uptime__c*100 &lt; 75, 
&quot;/resource/ServiceMaxIcons/CircleStopped.png&quot;,
IF(SVMX_PS_Asset_Uptime__c*100 &lt; 90, 
&quot;/resource/ServiceMaxIcons/CircleWarning.png&quot;, 
&quot;/resource/ServiceMaxIcons/CircleNormal.png&quot;)),
&quot;Health Indicator&quot;, 16,16) + &apos; &apos; +
TEXT(SVMX_PS_Asset_Uptime__c*100)+&apos;% Uptime&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Health Indicator</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SVMX_PS_IP_Count__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IP Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SVMX_PS_Serial_Number__c</fullName>
        <description>Unique serial number field that is used to prevent duplicate IPs from being adding to the database by throwing a duplicate error message.</description>
        <label>Dup Serial Number Check</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>UK_Navision_Ref_Num__c</fullName>
        <label>UK Navision Ref Num</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Installed Product</label>
    <listViews>
        <fullName>SVMXC__All_Installed_Products</fullName>
        <columns>SVMXC__Site__c</columns>
        <columns>NAME</columns>
        <columns>SVMXC__Product_Name__c</columns>
        <columns>SVMXC__Parent__c</columns>
        <columns>SVMXC__Serial_Lot_Number__c</columns>
        <columns>SVMXC__Company__c</columns>
        <columns>SVMXC__Contact__c</columns>
        <columns>SVMXC__Date_Shipped__c</columns>
        <columns>SVMXC__Date_Installed__c</columns>
        <columns>SVMXC__Status__c</columns>
        <columns>SVMXC__Street__c</columns>
        <columns>SVMXC__Country__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Installed Products</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Installed Product ID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Installed Products</pluralLabel>
    <recordTypes>
        <fullName>Bucket</fullName>
        <active>true</active>
        <label>Bucket</label>
    </recordTypes>
    <recordTypes>
        <fullName>Installation_non_physical_Product</fullName>
        <active>true</active>
        <label>Installation (Non-Physical Product)</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>